infra/k8s/old_domain/nginx.yml
---

# Deployment

kind: Deployment
apiVersion: apps/v1
metadata:
  name: redirects
  namespace: zgw
  labels:
    k8s-app: redirects
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: redirects
  template:
    metadata:
      name: redirects
      labels:
        k8s-app: redirects
    spec:
      containers:
      - name: redirects
        image: nginx:1.15
        resources:
          requests:
            memory: "10Mi"
            cpu: "5m"
          limits:
            memory: "100Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
          - name: redirects-config
            mountPath: /etc/nginx/conf.d/
      volumes:
      - name: redirects-config
        configMap:
          name: redirects-config

---

# Service

kind: Service
apiVersion: v1
metadata:
  name: redirects
  namespace: zgw
  labels:
    k8s-app: redirects
spec:
  selector:
    k8s-app: redirects
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
