infra/k8s/old_domain/ingress.yml
---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: redirects
  namespace: zgw
  labels:
    app.kubernetes.io/instance: zgw-test
    app.kubernetes.io/name: zgw
spec:
  rules:
  - host: ref.tst.vng.cloud
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: redirects
              port:
                number: 80

  tls:
    - hosts:
        - ref.tst.vng.cloud
